# ROBOTICA

./: README.md
Escritorio/ejemplo1/: ejemplo1.cpp  ejemplo1.h  ejemplo1.kdev4  main.cpp
Escritorio/ejemplo1/.kdev4/: ejemplo1.kdev4
ejemplo1/: .ejemplo1.cpp.kate-swp  CMakeLists.txt  counterDlg.ui  ejemplo1.cpp  ejemplo1.h  myqtimer.cpp  myqtimer.h
ejemplo1/.kdev4/: ejemplo1.kdev4
